Fixed an issue with the job not showing up as complete when it was completed

--- a/src/index.css
+++ b/src/index.css
@@ -63,7 +63,7 @@ text-align: center;
   margin-bottom: 10px;
   margin-top: 50%;
   margin-left: 25%;
-  padding-top: 18%;
+  padding-top: 15%;
   border: 2px solid black;
   height: 150px;
   border-radius: 50%;
